src/components/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;
.josefin{
    font-family: 'josefin sans', Arial, Helvetica, sans-serif
}
.montserrat{
    font-family: 'montserrat', Arial, Helvetica, sans-serif;
}

.lato{
    font-family: 'lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.curvy{
    font-family: Georgia, 'Times New Roman', Times, serif;
}
.heaviest{
    font-weight: 700
}
.opensans{
    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif
}
.highlight{
    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 40%, #f6ad55 40%);
}
#SideMenu{
    /* transform: translateX(100%); */
    transform: translateX(100%);
    transition: transform .5s;

}
#SideMenu.true{
    transform: translateX(0%);
    transition: transform .5s

}
@import url('./markdown.css');

